# ai-lab

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.extend.yml
.devcontainer/scripts/: setup.sh
app/: __init__.py  main.py
app/api/: router.py
app/core/: config.py  database.py  dependencies.py  exceptions.py  security.py
app/guardrails/: engine.py
app/middleware/: logging.py  rate_limit.py
app/models/: base.py  conversation.py  document.py  message.py  persona.py
app/observability/: logging.py  metrics.py  tracing.py
app/personas/: loader.py
app/prompts/: loader.py
app/providers/: anthropic_provider.py  azure_provider.py  base.py  factory.py  openai_provider.py
app/rag/: chunker.py  indexer.py  pipeline.py  reranker.py  retriever.py
app/repositories/: base.py  conversation.py  document.py  message.py
app/schemas/: chat.py  common.py  conversation.py  document.py  persona.py
app/services/: chat_service.py  document_service.py  embedding_service.py  guardrail_service.py  persona_service.py  prompt_service.py  rag_service.py
app/tools/: base.py  calculator.py  datetime_tool.py  document_search.py  registry.py  url_fetcher.py  web_search.py
app/workflows/: chat_workflow.py  states.py
examples/: requests.http
migrations/: env.py
migrations/versions/: 0001_initial.py
scripts/: bootstrap.sh  init_db.sql
tests/: conftest.py
tests/api/: test_chat.py
tests/unit/: test_chunker.py  test_providers.py  test_tools.py
(+18 files in other folders)
